// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should render the text 1`] = `
<div
  aria-label="cart.discount: foo"
  className="ui-shared__discount-badge"
  data-test-id="foo"
  tabIndex={-1}
>
  <Text
    acceptPlainTextWithPlaceholders={false}
    aria-hidden={true}
    className="sg-yzhxh7-small theme__discount-badge"
    params={
      [
        null,
      ]
    }
    role={null}
    string="foo"
    transform={null}
  />
</div>
`;

exports[`<DiscountBadge /> should render the text and discount 1`] = `
<div
  aria-label="cart.discount: SAVE {0}%"
  className="ui-shared__discount-badge"
  data-test-id="SAVE {0}%"
  tabIndex={-1}
>
  <Text
    acceptPlainTextWithPlaceholders={false}
    aria-hidden={true}
    className="sg-yzhxh7-small theme__discount-badge"
    params={
      [
        20,
      ]
    }
    role={null}
    string="SAVE {0}%"
    transform={null}
  />
</div>
`;
